--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ExamManagement
+spring.application.name=ExamManagementApp
 
 #dev if in developement mode and prod if in production
 gsabs.app.mode=DEV
@@ -13,13 +13,14 @@ spring.mvc.view.prefix=/WEB-INF/jsp/view/
 spring.mvc.view.suffix=.jsp
 
 ##DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/exam_manag_db
+spring.datasource.url=jdbc:mysql://localhost:3306/exam_management_db
 spring.datasource.username=root
 spring.datasource.password=afkir
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-
+#Port
+server.port=4440
 #drop and create tables again
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
